Fixed the bug that prevents content rendering on scroll on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,17 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Aboreto&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
-html, body {
-  height:100%;
-}
-
 #root {
   margin: 0;
   font-size: 1.2rem;
   color: white;
-}
-
-button {
-  font-size: 1.2rem;
 }
 
 body {
@@ -19,6 +10,10 @@ body {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+}
+
+button {
+  font-size: 1.2rem;
 }
 
 button:active {
