--- a/src/styles/navbarandlogo.css
+++ b/src/styles/navbarandlogo.css
@@ -119,7 +119,6 @@ a:hover,
   object-fit: cover;
   position: absolute;
   z-index: -1;
-  overflow: hidden;
 }
 
 .logo {
@@ -146,7 +145,7 @@ a:hover,
 } */
 
 @media (max-width: 700px) {
-  video {
+  .main video {
     display: none;
   }
   .main {
